# J-Link-RTT-Viewer-MCP

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  QUICKSTART.md  README.md  TASK_EXECUTION_GUIDE.md  config.example.json  install.bat  pyproject.toml  requirements.txt  setup.py  start.bat  test_server.py
docs/: api.md  contributing.md  deployment.md  developer_guide.md  faq.md  getting_started.md  maintenance.md  testing.md  troubleshooting.md  user_manual.md
examples/: basic_usage.py  usage_examples.py
src/: __init__.py  server.py
src/core/: __init__.py  jlink_manager.py  rtt_handler.py
src/prompts/: __init__.py  templates.py
src/resources/: __init__.py  device.py
src/tools/: __init__.py  connection.py  flash.py  memory.py  reset.py  rtt.py
target_example/STM32F103C8T6/: .mxproject  CLAUDE.md  STM32F103C8T6.ioc
target_example/STM32F103C8T6/APP/: APP_Main.c  APP_Main.h
target_example/STM32F103C8T6/BFL/: BFL_Buzz.c  BFL_Buzz.h  BFL_LED.c  BFL_LED.h  BFL_RS422.c  BFL_RS422.h  BFL_RS485.c  BFL_RS485.h  BFL_RS485422.c  BFL_RS485422.h  Key.c  Key.h  alarm_clock.c  alarm_clock.h  cooperate_scheduler.c  cooperate_scheduler.h  cooperate_scheduler_test.c  cooperate_scheduler_test.h  cpu_time.h  log.h  modbus_host.c  modbus_host.h  modbus_test.c  modbus_test.h  mtime.c  mtime.h  rtc_time.h  scheduler.c  scheduler.h  scheduler_test.c  test_lib.c  test_lib.h
target_example/STM32F103C8T6/Board/: Board.c  Board.h  Board_Fan.c  (+3 more)
target_example/STM32F103C8T6_minimal/: CLAUDE.md  README.md  main.c
tests/: test_connection.py  test_edge_cases.py  test_hex.py  test_integration.py  test_prompts.py  test_resources.py  test_rtt_handler.py  test_server_tools.py  test_tools.py
(+258 files in other folders)
